# velox

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_ORGANIZATION.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  PROJECT_STRUCTURE.md  README.md  WORKSPACE_SETUP.md  build.sh  debug_char.cpp  index.html  package-lock.json  package.json  test_phase1  xl-formula.js
.cursor/: mcp.json
assets/: arc-BOfr7z2I.js  blockDiagram-38ab4fdb-BWorVACX.js  c4Diagram-3d4e48cf-ByMk5WNv.js  channel-BL-Ad7ol.js  classDiagram-70f12bd4-D1C_fK-B.js  classDiagram-v2-f2320105-DKkk-_Xz.js  clone-CSdKhW4A.js  createText-2e5e7dd3-BSj61wB0.js  edges-e0da2a9e-D7ghD2yr.js  erDiagram-9861fffd-dtHlFOtA.js  flowDb-956e92f1-BVJAiMSz.js  flowDiagram-66a62f08-0XgeJF8I.js  flowDiagram-v2-96b9c2cf-DbT8R2tx.js  flowchart-elk-definition-4a651766-Cqyhg50N.js  formula-DKr7iNMr.js  formula-DkIGol2c.js  formula-wrapper-B6H7nW3V.js  formula-wrapper-CwanvDnI.js  formulas-fDH_ziBS.js  formulas-q30oM0Mh.wasm  ganttDiagram-c361ad54-C13DYnyl.js  gitGraphDiagram-72cf32ee-CIoEUTGL.js  graph-BGnXOX2M.js  index-3862675e-CfVyZN_N.js  index-8-Fzj3vH.js  index-BAurB141.css  index-BEcficOa.js  index-BLvYt2DE.css  index-BMMS8iOB.js  index-BPAzNA7Y.js  index-BRMHw2IX.js  index-BSC-hTcC.js  index-BbJdWvaL.js  index-BntGbily.js  index-ByIuqBCu.js  index-C52FELuk.js  index-CDFSt6c6.js  index-CHTYKaNV.js  index-Cc4k2yAK.js  index-CgakpeX_.js  (+64 more)
cpp/bindings/web/: CMakeLists.txt  Makefile  web_bindings.cpp
cpp/libraries/formulas/: CMakeLists.txt  Makefile
cpp/libraries/formulas/core/: api.cpp  context.cpp  types.cpp
cpp/libraries/formulas/engine/: evaluator.cpp  formula_engine.cpp
cpp/libraries/formulas/functions/: fn_dispatcher.cpp  nonstd.cpp
cpp/libraries/formulas/functions/datetime/: date.cpp  datedif.cpp  day.cpp  hour.cpp  minute.cpp  month.cpp  now.cpp  second.cpp  time.cpp  today.cpp  weekday.cpp  year.cpp
cpp/libraries/formulas/functions/engineering/: bin2dec.cpp  bin2oct.cpp  bitand.cpp  bitor.cpp  bitxor.cpp  complex.cpp  convert.cpp  dec2bin.cpp  dec2hex.cpp  dec2oct.cpp  hex2dec.cpp  hex2oct.cpp  imaginary.cpp  imreal.cpp  oct2bin.cpp  oct2hex.cpp
cpp/libraries/formulas/functions/financial/: fv.cpp  irr.cpp  mirr.cpp  nper.cpp  npv.cpp  pmt.cpp  pv.cpp  rate.cpp
cpp/libraries/formulas/functions/logical/: and.cpp  false.cpp  if.cpp  iferror.cpp  ifna.cpp  ifs.cpp  isblank.cpp  iserror.cpp  isnumber.cpp  istext.cpp  not.cpp  or.cpp  switch.cpp  true.cpp  xor.cpp
cpp/libraries/formulas/functions/lookup/: choose.cpp  row_column.cpp
cpp/libraries/formulas/functions/math/: abs.cpp  acos.cpp  asin.cpp  atan.cpp  atan2.cpp  average.cpp  averageif.cpp  averageifs.cpp  ceiling.cpp  combin.cpp  correl.cpp  cos.cpp  cosh.cpp  count.cpp  countif.cpp  degrees.cpp  even.cpp  exp.cpp  fact.cpp  floor.cpp  gcd.cpp  int.cpp  large.cpp  lcm.cpp  ln.cpp  log.cpp  log10.cpp  max.cpp  median.cpp  min.cpp  mod.cpp  mode.cpp  mround.cpp  odd.cpp  percentile.cpp  permut.cpp  pi.cpp  power.cpp  quartile.cpp  quotient.cpp  (+23 more)
cpp/libraries/formulas/functions/text/: char.cpp  clean.cpp  code.cpp  concatenate.cpp  exact.cpp  find.cpp  left.cpp  len.cpp  lower.cpp  mid.cpp  proper.cpp  replace.cpp  right.cpp  roman_arabic.cpp  rpt.cpp  search.cpp  substitute.cpp  t.cpp  text.cpp  textjoin.cpp  trim.cpp  unichar.cpp  unicode.cpp  upper.cpp  value.cpp
cpp/libraries/formulas/functions/utils/: conditional_utils.cpp  statistical_utils.cpp  validation.cpp
cpp/libraries/formulas/include/velox/formulas/: conditional_utils.h  evaluator.h  functions.h  parser.h  statistical_utils.h  xl-formula.h
cpp/libraries/formulas/parser/: ast.cpp  lexer.cpp  parser.cpp
docs/: CODE_ORGANIZATION.md  CONTRIBUTING.md  ROADMAP.md  (+4 more)
examples/: CMakeLists.txt  Makefile  advanced_example.cpp  advanced_example.js  advanced_example.wasm  basic_example.cpp  basic_example.js  basic_example.wasm
tests/: CMakeLists.txt  Makefile  test_evaluator.cpp  test_integration.cpp  test_parser.cpp  test_types.cpp  xl-formula-tests.js  xl-formula-tests.wasm  xl-formula-tests[1]_include.cmake  xl-formula-tests[1]_tests.cmake
tests/functions/datetime/: test_date.cpp  test_datevalue_timevalue.cpp  test_edate_eomonth.cpp  test_hour.cpp  test_now.cpp  test_time.cpp  test_today.cpp  test_weekday.cpp  test_year.cpp
tests/functions/engineering/: test_bin2dec.cpp  test_bitwise.cpp  test_complex_basic.cpp  test_convert.cpp  test_dec2bin.cpp  test_dec2hex.cpp  test_hex2dec.cpp  test_octal_conversions.cpp
tests/functions/financial/: test_fv.cpp  test_irr.cpp  test_mirr.cpp  test_nper.cpp  test_npv.cpp  test_pmt.cpp  test_pv.cpp  test_rate.cpp
tests/functions/logical/: test_and.cpp  test_boolean.cpp  test_if.cpp  test_iferror.cpp  test_ifna.cpp  test_ifs.cpp  test_is_functions.cpp  test_not.cpp  test_or.cpp  test_switch.cpp  test_xor.cpp
tests/functions/lookup/: test_lookup_basic.cpp
tests/functions/math/: test_abs.cpp  test_advanced_rounding.cpp  test_atan2.cpp  test_average.cpp  test_averageif.cpp  test_averageifs.cpp  test_ceiling.cpp  test_combin.cpp  test_correl.cpp  test_cos.cpp  test_count.cpp  test_countif.cpp  test_covariance.cpp  test_degrees.cpp  test_even.cpp  test_exp.cpp  test_fact.cpp  test_floor.cpp  test_gcd.cpp  test_int.cpp  test_large.cpp  test_lcm.cpp  test_ln.cpp  test_log.cpp  test_max.cpp  test_median.cpp  test_min.cpp  test_mod.cpp  test_mode.cpp  test_odd.cpp  test_percentile.cpp  test_permut.cpp  test_pi.cpp  test_power.cpp  test_quartile.cpp  test_quotient.cpp  test_radians.cpp  test_rand.cpp  test_randbetween.cpp  test_rank.cpp  (+15 more)
tests/functions/nonstd/: test_nonstd.cpp
tests/functions/text/: test_char.cpp  test_clean.cpp  test_code.cpp  test_concatenate.cpp  test_exact.cpp  test_find.cpp  test_left.cpp  test_len.cpp  test_lower.cpp  test_mid.cpp  test_proper.cpp  test_replace.cpp  test_right.cpp  test_roman_arabic.cpp  test_rpt.cpp  test_search.cpp  test_substitute.cpp  test_t.cpp  test_text.cpp  test_textjoin.cpp  test_trim.cpp  test_unichar.cpp  test_unicode.cpp  test_upper.cpp  test_value.cpp
tests/functions/utils/: test_validation.cpp
(+209 files in other folders)
